--- a/examples/02-counter/index.html
+++ b/examples/02-counter/index.html
@@ -19,6 +19,11 @@
       referrerpolicy="no-referrer"
     />
     <script src="main.js"></script>
+    <style>
+      body {
+        padding: 2em;
+      }
+    </style>
   </head>
   <body>
     <h1>Counter</h1>
